fix fonts flickering bug

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -6,7 +6,7 @@ button {
   transition: all 0.4s ease;
   border: none;
   border-radius: 1rem;
-  font-size: $font-size-middle;
+  font-size: $font-size-small;
 
   &:hover {
     transform: scale(1.1);
