--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -3,7 +3,7 @@ $main-font-family: 'Gloria Hallelujah', cursive;
 $font-size-big: 3rem;
 $font-size-large: 2.5rem;
 $font-size-medium: 2rem;
-$font-size-middle: 1.5rem;
+$font-size-middle: 1.2rem;
 $font-size-small: 1rem;
 $font-size-tiny: 0.8rem;
 $font-size-tiniest: 0.6rem;
